--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,12 @@ simple-parsing = "^0.1.6"
 pandas = "^2.2.3"
 pydantic = "^2.9.2"
 tqdm = "^4.67.0"
-diffusers = "^0.31.0"
+diffusers = "0.30.2"
 torch = "^2.5.1"
 transformers = "^4.46.2"
 accelerate = "^1.1.1"
+protobuf = "^5.28.3"
+sentencepiece = "^0.2.0"
 
 
 [build-system]
